# Tolist2.0

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
release-notes/: v1.1.0.md  v1.2.0.md
scripts/: build-mac-release.sh  build-windows-release.ps1  create-latest-json.ps1  publish-github-release.ps1
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  database.ts  reminders.ts  types.ts
src/app/components/: date-tasks-modal.tsx  day-view.tsx  desktop-mascot.tsx  floating-panel.tsx  mascot-pet.tsx  month-view.tsx  stats-panel.tsx  task-card.tsx  task-modal.tsx  tools-modal.tsx  view-switcher.tsx  week-view.tsx
src/app/components/charts/: completion-pie-chart.tsx
src/styles/: animations.css  theme.css
